--- a/localisation/english/PB_Rio_Grande_l_english.yml
+++ b/localisation/english/PB_Rio_Grande_l_english.yml
@@ -13,6 +13,7 @@
   PB_RGD_Resistance_to_Centralization:0 "Resistance to Centralization"
   PB_RGD_Resistance_to_Centralization_desc:0 "The Riograndese Constitution enshrines the autonomy of local governments, largely as a response to the centralist provincial policies of the Empire which sparked the Republic's declaration of independence. Though this policy has greatly empowered provincial governors, allowing for flexible domestic policy, it has lead to a disfunctional military largely composed of provincial militias. Many provincial governors resist our efforts to centralize the government, but it may be necessary to defend ourselves against outside threats."
   PB_RGD_Revolution_Legacy:0 "Legacy of 1878"
+  PB_RGD_Revolution_Legacy_2:0 "Legacy of 1878"
 
   ##########################
   # FOCUSES
