--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -459,6 +459,7 @@
  VICTORY_POINTS_1349:0 "Bombaim"
  VICTORY_POINTS_2086:0 "Delhi"
  VICTORY_POINTS_4245:0 "Calcutta"
+ VICTORY_POINTS_12338:0 "Shiliguri"
  VICTORY_POINTS_10278:0 "Madras"
  VICTORY_POINTS_4987:0 "Kathmandu"
  VICTORY_POINTS_8010:0 "Punakha"
