--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -841,7 +841,7 @@
  STATE_840:0 "Tonkin"
  STATE_841:0 "Apurdi"
  STATE_842:0 "Alaba"
- STATE_843:0 "Balasor"
+ STATE_843:0 "Balasore"
  STATE_844:0 "Bom Bahia"
  STATE_845:0 "Diu"
  STATE_846:0 "Goa"
