I love BEI ( pls i need help)

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -466,6 +466,14 @@
  VICTORY_POINTS_2843:0 "Khulna"
  VICTORY_POINTS_12366:0 "Guwahati"
  VICTORY_POINTS_1116:0 "Itanagar"
+ VICTORY_POINTS_12090:0 "Akyab"
+ VICTORY_POINTS_1403:0 "Mawlamyine"
+ VICTORY_POINTS_7254:0 "Pathein"
+ VICTORY_POINTS_10344:0 "Pyay"
+ VICTORY_POINTS_12127:0 "Bago"
+ VICTORY_POINTS_1566:0 "Taunggyi"
+ VICTORY_POINTS_10386:0 "Monywa"
+ VICTORY_POINTS_1581:0 "Imphal"
  VICTORY_POINTS_10278:0 "Madras"
  VICTORY_POINTS_4987:0 "Kathmandu"
  VICTORY_POINTS_8010:0 "Punakha"
