--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -93,6 +93,7 @@
   PB_MEX_Our_Finest_Hour_tt:0 "\nThe above countries will be aware of our aggressive military posturing and will form defensive alliances against us."
   PB_MEX_Operation_Screeming_South_tt:0 "\nPicking this focus will autocomplete the focus §HOperation: Dead North§!. This will mean you will be at war with the north but will only receive buffs against your southern enemies. You can only pick one of each so choose wisely.\n\n"
   PB_MEX_Operation_Dead_North_tt:0 "\nPicking this focus will autocomplete the focus §HOperation: Screeming South§!. This will mean you will be at war with the south but will only receive buffs against your northern enemies. You can only pick one of each so choose wisely.\n\n"
+  PB_MEX_Mobolize_The_Reserves_tt:0 "\n4 £GFX_nato_unit_infantry_icon_small  Reserve Infantry units will be mobolized"
 
   ##########################
   # ALLIANCE
@@ -257,6 +258,18 @@
   # COUNTRY FLAG
   ##########################
   MEX_April_Crisis_Yes:0 "The April Crisis has occured"
+
+  ##########################
+  # COSMETIC
+  ##########################
+
+  MEX_Grand_Empire:0 "Grand Empire of Mexico"
+  MEX_Grand_Empire_DEF:0 "the Grand Empire of Mexico"
+  MEX_Grand_Empire_ADJ:0 "Mexican"
+
+  MEX_Greater_Mexico:0 "Greater Mexican National State"
+  MEX_Greater_Mexico_DEF:0 "the Greater Mexican National State"
+  MEX_Greater_Mexico_ADJ:0 "Mexican"
 
   ##########################
   # IDEAS
