--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -457,15 +457,15 @@
   PBNews.117.a:0 "The empire readies itself for war."
 
   PBNews.118.t:0 "MEXICO DECLARES WAR"
-  PBNews.118.d:0 ""
+  PBNews.118.d:0 "Today the Mexican delegation in Los Angeles had confirmed many nations speculations of the impending war between Mexico city and its opposing republican neighbours. Such news came only a few hours after fighting had been reported near the Monterrey-Neuvo Laredo border. After months of aggressive posturing and rapid military expansions from Mexico it has been no surprise to many that Mexico has now dedicated herself to the reclaiming of her old imperial possessions. Who will come out the victor from this potentially devastating conflict is yet known, however many suspect that Mexico will struggle to break the will of her opposing coalitions. "
   PBNews.118.a:0 "It seems peace was a fools gamble."
   
   PBNews.119.t:0 "MEXICO BEATS COALITION"
-  PBNews.119.d:0 "Triumphant Mexican troops paraded around the city of San Francisco as they reign victorious over the coalition. Thousands have died in the name of Mexico. What is to be done with the new territories is not yet announced, but the population assumes they will be integrated into Mexico proper. This victory has certainly changed Mexicos position on the world stage, as they are now a force to be reckoned with. It is still up in the air what Mexico will do next, will they stay at peace or seek out new enemies? Only time can tell"
+  PBNews.119.d:0 "Triumphant Mexican troops paraded around the city of Mexico late this afternoon as they reign victorious over both the Northern and Southern coalitions. What is to be done with the new territories is not yet announced, but the population assumes they will be integrated into Mexico proper. This victory has certainly changed Mexico’s position on the world stage, as they are now a force to be reckoned with. It is still up in the air what Mexico will do next, will they stay at peace or seek out new enemies? Only time can tell."
   PBNews.119.a:0 "An empire restored?"
 
   PBNews.120.t:0 "COALITION BEATS MEXICO"
-  PBNews.120.d:0 "Triumphant coalition troops enter Mexico City as they reign victorious over the Mexican Empire. A true humiliation for the Mexicans. The coalition plans to annex Mexico in its entirety and unify under a single banner. To form a United State, with a shared culture and values. This new state will surely be a force to reckoned with on the ever changing world stage, but seeing as their actions were out of defence it is unlikely that more wars will succeed this one in the near future. We will have to see."
+  PBNews.120.d:0 "Triumphant coalition troops have entered Mexico City as they reign victorious over one of the most brutal conflicts to ever see the light of day. The coalition plans to annex Mexico in its entirety and unify under a single banner. Where a new united states of will be formed with Los Angeles as its capital. While Tejas, Sante Fe, and Rio Grande, as well as occupied Mexico have all agreed to join this new state the Southern coalition, made up of Yucatan, Guatemala, and Los Altos have decided to maintain their independence."
   PBNews.120.a:0 "An empire defeated."
 
   PBNews.121.t:0 "D'ANNUNZIO GOVERNMENT FALLS"
