--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -3782,3 +3782,7 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   NIC_American_Integration_ds_ADJ:0 "Nicaraguan-American"
   NIC_American_Integration_cn_ADJ:0 "Nicaraguan-American"
   NIC_American_Integration_an_ADJ:0 "Nicaraguan-American"
+
+  CAL_United_States_Of_Mexico:0 "United States of México"
+  CAL_United_States_Of_Mexico_DEF:0 "the United States of México"
+  CAL_United_States_Of_Mexico_ADJ:0 "Mexican"
