Texan - Vietnamese Hyper Alliance through Time

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -474,6 +474,25 @@
  VICTORY_POINTS_1566:0 "Taunggyi"
  VICTORY_POINTS_10386:0 "Monywa"
  VICTORY_POINTS_1581:0 "Imphal"
+ VICTORY_POINTS_4302:0 "Siem Reap"
+ VICTORY_POINTS_7432:0 "Sihanoukville"
+ VICTORY_POINTS_10177:0 "Battambang"
+ VICTORY_POINTS_7342:0 "George Town"
+ VICTORY_POINTS_4424:0 "Johor Bahru"
+ VICTORY_POINTS_1364:0 "Ipoh"
+ VICTORY_POINTS_7399:0 "Kuantan"
+ VICTORY_POINTS_7427:0 "Malacca"
+ VICTORY_POINTS_1291:0 "Alor Setar"
+ VICTORY_POINTS_1563:0 "Pakse"
+ VICTORY_POINTS_4539:0 "Savannakhet"
+ VICTORY_POINTS_12133:0 "Can Tho"
+ VICTORY_POINTS_1185:0 "Nam Dinh"
+ VICTORY_POINTS_7015:0 "Thai Nguyen"
+ VICTORY_POINTS_7271:0 "Dalat"
+ VICTORY_POINTS_10162:0 "Nha Trang"
+ VICTORY_POINTS_4363:0 "Pleiku"
+ VICTORY_POINTS_5022:0 "Waterloo"
+ VICTORY_POINTS_1998:0 "San Sansa"
  VICTORY_POINTS_10278:0 "Madras"
  VICTORY_POINTS_4987:0 "Kathmandu"
  VICTORY_POINTS_8010:0 "Punakha"
