Santa Fe love bc i love my Sandy Mountain Mexicans

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -493,6 +493,7 @@
  VICTORY_POINTS_4363:0 "Pleiku"
  VICTORY_POINTS_5022:0 "Waterloo"
  VICTORY_POINTS_1998:0 "San Sansa"
+ VICTORY_POINTS_5001:0 "Texarkana"
  VICTORY_POINTS_10278:0 "Madras"
  VICTORY_POINTS_4987:0 "Kathmandu"
  VICTORY_POINTS_8010:0 "Punakha"
@@ -785,6 +786,7 @@
  VICTORY_POINTS_11833:0 "Livorno"
  VICTORY_POINTS_7564:0 "Brisbane"
  VICTORY_POINTS_12535:0 "Ti'tsa-pa"
+ VICTORY_POINTS_10651:0 "Pi'a ka bo ni uts"
  VICTORY_POINTS_12642:0 "Historia"
  VICTORY_POINTS_1827:0 "Shaysville"
  VICTORY_POINTS_11846:0 "Anzio"
@@ -813,7 +815,12 @@
  VICTORY_POINTS_4879:0 "Windhoek"
  VICTORY_POINTS_10472:0 "Kars"
  VICTORY_POINTS_4512:0 "Diyarbakir"
- VICTORY_POINTS_12552:0 "Santa Fe"
+ VICTORY_POINTS_12552:0 "Albuquerque"
+ VICTORY_POINTS_13301:0 "Santa Fe"
+ VICTORY_POINTS_12791:0 "Las Cruces"
+ VICTORY_POINTS_4742:0 "Farmville"
+ VICTORY_POINTS_4796:0 "Ich i Nahiltii"
+ VICTORY_POINTS_853:0 "Kiiya Ya'ai"
  VICTORY_POINTS_12124:0 "Coeur d'Alene"
  VICTORY_POINTS_1875:0 "Empire City"
  VICTORY_POINTS_10569:0 "Norton"
@@ -828,7 +835,7 @@
  VICTORY_POINTS_7335:0 "Qaragandy"
  VICTORY_POINTS_11701:0 "Aqtau"
  VICTORY_POINTS_10709:0 "Niwaharit"
- VICTORY_POINTS_1815:0 "Mitsi Adazi"
+ VICTORY_POINTS_1815:0 "Qwickville"
  VICTORY_POINTS_1576:0 "Nukus"
  VICTORY_POINTS_13203:0 "Novo-Arkhangelsk"
  VICTORY_POINTS_7884:0 "Pavlovskiy"
@@ -885,7 +892,7 @@
  VICTORY_POINTS_10960:0 "Porto Acre"
  VICTORY_POINTS_4985:0 "Sagallo"
  VICTORY_POINTS_12211:0 "Portland"
- VICTORY_POINTS_10582:0 "Salt Lake City"
+ VICTORY_POINTS_10582:0 "El lago Salado"
  VICTORY_POINTS_12721:0 "Ciudad Victoria"
  VICTORY_POINTS_9637:0 "Monterrey de California"
  VICTORY_POINTS_11905:0 "Alexandroupolis"
@@ -1104,8 +1111,8 @@
  VICTORY_POINTS_12516:0 "Americaville"
  VICTORY_POINTS_12893:0 "Rancho Carnero"
  VICTORY_POINTS_10198:0 "Twin Peaks"
- VICTORY_POINTS_10573:0 "Night Vale"
- VICTORY_POINTS_10645:0 "Desert Bluffs"
+ VICTORY_POINTS_10573:0 "Valle Nocturno"
+ VICTORY_POINTS_10645:0 "Ciudad Pueblo"
  VICTORY_POINTS_941:0 "Valle de la Colina"
  VICTORY_POINTS_10483:0 "Questa Verde"
  VICTORY_POINTS_10909:0 "Chattanooga"
