--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -97,11 +97,17 @@ PB_No_Welfare:0 "No State Welfare"
 
 sociogenetics:0 "Sociogenetics Policy"
 PB_Sociogenetics_Allowed:0 "Sociogenetics Allowed"
-PB_Sociogenetics_Allowed_desc:0 ""
+PB_Sociogenetics_Allowed_desc:0 "Social Genetics, typically shortened as Sociogenetics, is a scientific field related to the management of the human genetic pool. Coined in the late 1800s, Sociogenetics largely developed as a response to the Population Boom caused by the Second Renaissance. As the medical sciences advanced, infant mortality dropped rapidly across the civilized world and consequently population numbers increased. In an effort to combat this, Sociogenetics was adopted by many nations in an effort to manage the population and gradually phase out less desirable traits.\n\nIn most countries, this is managed via genetic panel studies intended to detect traits such as abnormally low IQ, deformity, or congenital illness. If such traits are detected, the parent is typically advised to either terminate the pregnancy or report the child for sterilization at the appropriate age. In some nations, this is supplemented through Child Licensure and population counter systems to prevent overcrowding in megacities. Although on paper these systems are not racially motivated, there are innumerable cases of nations targeting certain groups disproportionately over others."
 PB_Sociogenetics_Normalized:0 "Sociogenetics Normalized"
+PB_Sociogenetics_Normalized_desc:0 "Social Genetics, typically shortened as Sociogenetics, is a scientific field related to the management of the human genetic pool. Coined in the late 1800s, Sociogenetics largely developed as a response to the Population Boom caused by the Second Renaissance. As the medical sciences advanced, infant mortality dropped rapidly across the civilized world and consequently population numbers increased. In an effort to combat this, Sociogenetics was adopted by many nations in an effort to manage the population and gradually phase out less desirable traits.\n\nIn most countries, this is managed via genetic panel studies intended to detect traits such as abnormally low IQ, deformity, or congenital illness. If such traits are detected, the parent is typically advised to either terminate the pregnancy or report the child for sterilization at the appropriate age. In some nations, this is supplemented through Child Licensure and population counter systems to prevent overcrowding in megacities. Although on paper these systems are not racially motivated, there are innumerable cases of nations targeting certain groups disproportionately over others."
 PB_Sociogenetics_Enforced:0 "Sociogenetics Enforced"
+PB_Sociogenetics_Enforced_desc:0 "Social Genetics, typically shortened as Sociogenetics, is a scientific field related to the management of the human genetic pool. Coined in the late 1800s, Sociogenetics largely developed as a response to the Population Boom caused by the Second Renaissance. As the medical sciences advanced, infant mortality dropped rapidly across the civilized world and consequently population numbers increased. In an effort to combat this, Sociogenetics was adopted by many nations in an effort to manage the population and gradually phase out less desirable traits.\n\nIn most countries, this is managed via genetic panel studies intended to detect traits such as abnormally low IQ, deformity, or congenital illness. If such traits are detected, the parent is typically advised to either terminate the pregnancy or report the child for sterilization at the appropriate age. In some nations, this is supplemented through Child Licensure and population counter systems to prevent overcrowding in megacities. Although on paper these systems are not racially motivated, there are innumerable cases of nations targeting certain groups disproportionately over others."
 PB_Sociogenetics_Racial:0 "Race-Based Sociogenetics"
+PB_Sociogenetics_Racial_desc:0 "Social Genetics, typically shortened as Sociogenetics, is a scientific field related to the management of the human genetic pool. Coined in the late 1800s, Sociogenetics largely developed as a response to the Population Boom caused by the Second Renaissance. As the medical sciences advanced, infant mortality dropped rapidly across the civilized world and consequently population numbers increased. In an effort to combat this, Sociogenetics was adopted by many nations in an effort to manage the population and gradually phase out less desirable traits.\n\nIn most countries, this is managed via genetic panel studies intended to detect traits such as abnormally low IQ, deformity, or congenital illness. If such traits are detected, the parent is typically advised to either terminate the pregnancy or report the child for sterilization at the appropriate age. In some nations, this is supplemented through Child Licensure and population counter systems to prevent overcrowding in megacities. Although on paper these systems are not racially motivated, there are innumerable cases of nations targeting certain groups disproportionately over others."
 PB_Sociogenetics_Banned:0 "Sociogenetics Banned"
+PB_Sociogenetics_Banned_desc:0 "Social Genetics, typically shortened as Sociogenetics, is a scientific field related to the management of the human genetic pool. Coined in the late 1800s, Sociogenetics largely developed as a response to the Population Boom caused by the Second Renaissance. As the medical sciences advanced, infant mortality dropped rapidly across the civilized world and consequently population numbers increased. In an effort to combat this, Sociogenetics was adopted by many nations in an effort to manage the population and gradually phase out less desirable traits.\n\nIn most countries, this is managed via genetic panel studies intended to detect traits such as abnormally low IQ, deformity, or congenital illness. If such traits are detected, the parent is typically advised to either terminate the pregnancy or report the child for sterilization at the appropriate age. In some nations, this is supplemented through Child Licensure and population counter systems to prevent overcrowding in megacities. Although on paper these systems are not racially motivated, there are innumerable cases of nations targeting certain groups disproportionately over others."
+PB_Sociogenetics_Malthusian:0 "Malthusian Sociogenetics"
+PB_Sociogenetics_Malthusian_desc:0 "Social Genetics, typically shortened as Sociogenetics, is a scientific field related to the management of the human genetic pool. Coined in the late 1800s, Sociogenetics largely developed as a response to the Population Boom caused by the Second Renaissance. As the medical sciences advanced, infant mortality dropped rapidly across the civilized world and consequently population numbers increased. In an effort to combat this, Sociogenetics was adopted by many nations in an effort to manage the population and gradually phase out less desirable traits.\n\nIn most countries, this is managed via genetic panel studies intended to detect traits such as abnormally low IQ, deformity, or congenital illness. If such traits are detected, the parent is typically advised to either terminate the pregnancy or report the child for sterilization at the appropriate age. In some nations, this is supplemented through Child Licensure and population counter systems to prevent overcrowding in megacities. Although on paper these systems are not racially motivated, there are innumerable cases of nations targeting certain groups disproportionately over others.\n\nA notable variation of Sociogenetics research, Malthusian Sociogenetics focuses more on population management over genetic selection processes. As the Population Explosion hit many nations, there was a need for greater infrastructure and living accomodations. Due to this, there was a push to implement greater population management policies in urban centers. Child licensure policies and hard legal caps on family size have become very common policies in many countries. "
 
 augments:0 "Augmentation Policy"
 PB_Augmentation_No_Legislation:0 "No Augmentation Legislation"
@@ -487,3 +493,27 @@ PB_FRA_Schneider:0 "Schneider Artillery"
 PB_FRA_Fuel_Commision:0 "Emergency Fuel Commision"
 PB_FRA_Famh:0 "FAMH Industries"
 PB_FRA_Special_Experiments:0 "SP Special Department"
+
+##########################
+# United Commonwealth
+##########################
+PB_AME_Edison_Electric:0 "Edison Imperial Electric Company"
+PB_AME_IBM:0 "Imperial Business Machines"
+PB_AME_Maynard_Rifling:0 "Maynard Rifling Incorporated"
+PB_AME_Sharps_Rifle_Company:0 "Sharps Rifle Company"
+PB_AME_Winchester_Rifles:0 "Winchester Arms Association"
+PB_AME_Vickers_American:0 "Vickers-Armstrong"
+PB_AME_Maxwell_Motors:0 "Maxwell-Chrysler"
+PB_AME_Ford_Company:0 "Ford Motor Company"
+PB_AME_Union_Standard_Oil:0 "Union Standard Oil Company"
+PB_AME_Dolbear_Bell:0 "Dolbear-Bell"
+
+PB_EIEC:0 "Electronics Megacorp"
+PB_Industrial_Megacorp:0 "Industrial Megacorp"
+PB_Petrochemical_Megacorp:0 "PetroCorp"
+PB_Communications_Megacorp:0 "CommuniCorp"
+advanced_electronics_developer:0 "Advanced Electronics Developer"
+industry_innovator:0 "Industry Innovator"
+frontier_tested_firearms:0 "Frontier Certified"
+Mass_Manufacture_tank_developer:0 "Mass Manufacturer"
+Quality_over_Quantity_tank_developer:0 "Quality over Quantity"
