--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -87,6 +87,9 @@
  CN_VARIANT_04:0 "§ODominant Party Democracy§!"
  CN_VARIANT_04_desc:0 "§ODominant Party Democracy§! is a system of governance wherein a single party rules without major opposition, even without the need for laws to restrict said opposition.\n\n This party hegemony may be born out of genuine popularity, or it may be born from there simply being no notable alternatives. In many cases, however, dominant party democracies tend to be defined by corruption and intimidation tactics to maintain control."
 
+ CN_VARIANT_05:0 "§OFiscal Conservatism§!"
+ CN_VARIANT_05_desc:0 "§OFiscal Conservatism§! is a minor offshoot of conservative thought that advocates for small government and limited intervention in the economy. Many fiscal conservatives push for establishing surplus budgets by slashing government programs and privatizing industries. With the Second Renaissance and the growth of global megacorporations, many fiscal conservatives have begun to advocate for increased cooperation between non government organizations and national governments."
+
  cn_drift:0 "Daily drift towards Conservatism"
 
  lb:0 "Liberals"
@@ -155,8 +158,8 @@
  JC_VARIANT_01:0 "Jacobinism"
  JC_VARIANT_01_desc:0 "Jacobinism is a school of thought that originated in the French Reformation. Originally espoused by Robespierre, modern Jacobins argue for the abolition of all hierachy, not just monarchy. Their principle concern is the creation of a direct democacy, often alongside the creation of a revolutionary vanguard to protect said democracy. In reality, however, this often leads to a far-left authoritarian government. Though progressive socially, Jacobin states are often despotic and militaristic, seeking to spread their revolution abroad.\n\nJacobins foster their support in the poor and defenseless, seeking to galvanize them to overturn the many crowns that pepper the Earth, bringing revolution worldwide."
 
- JC_VARIANT_02:0 "Anarchism"
- JC_VARIANT_02_desc:0 "Whoops my anarchy symbol."
+ JC_VARIANT_02:0 "§ORevolutionary Anarchism§!"
+ JC_VARIANT_02_desc:0 "§ORevolutionary Anarchism§!, sometimes colloquially referred to as Bakuninism, is a splinter ideology of Jacobin thought. Though the idea of decentralized states predates even the concept of ideology, modern revolutionary anarchism finds its roots in the works of Mikhail Bakunin, Nikolai Tchaikovsky and Henry David Thoreau.\n\nAs with many left wing ideologies, the most basic principles of anarchism vary wildly depending on who you ask. The most dominant school of thought in contemporary times lies with Russian revolutionary Nikolai Tchaikovsky, who advocated for armed resistance to the Tsarist autocracy until his arrest and death in 1906. With a martyr to rally their cause around, the Tchaikovsky Circle would become one of the most notorious terror networks in the Russian Empire.\n\nOutside of Russia, cosmopolitan anarchism remains a niche ideology, while so-called frontier anarchism found success in the North American interior. With the west remaining largely ungoverned, instances of frontier anarchism have sprouted up organically across the region. Most notably, New Walden would arise out of this ideological melting pot, basing their beliefs on Thoreau's eco-anarchism or green anarchism."
 
  JC_VARIANT_03:0 "§ORevolutionary Imperialism§!"
  JC_VARIANT_03_desc:0 "§ORevolutionary Imperialism§! is a radical, militant offshoot of Jacobinism arguing for the continued spread of the people's revolution. Revoultionary Imperialists seek to expand into surrounding nations and beyond, creating sister republics dedicated to their liberators' revolutionary ideals. Even among other Jacobins, Revolutionary Imperialists are seen as dangerous radicals, not just for their militancy but their tendency to gain traction within revolutionary militaries."
