--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -3683,6 +3683,106 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   SCA_Defeat_Cascadia_cn_ADJ:0 "American"
   SCA_Defeat_Cascadia_an_ADJ:0 "American"
 
+  AME_Revolutionary_State_ni:0 "Revolutionary America"
+  AME_Revolutionary_State_ni_DEF:0 "Revolutionary America
+  AME_Revolutionary_State_ds:0 "Revolutionary America"
+  AME_Revolutionary_State_ds_DEF:0 "Revolutionary America"
+  AME_Revolutionary_State_rc:0 "Revolutionary America"
+  AME_Revolutionary_State_rc_DEF:0 "Revolutionary America"
+  AME_Revolutionary_State_an:0 "Revolutionary America"
+  AME_Revolutionary_State_an_DEF:0 "Revolutionary America"
+  AME_Revolutionary_State_cn:0 "Revolutionary America"
+  AME_Revolutionary_State_cn_DEF:0 "Revolutionary America"
+  AME_Revolutionary_State_lb:0 "Revolutionary America"
+  AME_Revolutionary_State_lb_DEF:0 "Revolutionary America"
+  AME_Revolutionary_State_ss:0 "Revolutionary America"
+  AME_Revolutionary_State_ss_DEF:0 "Revolutionary America"
+  AME_Revolutionary_State_jc:0 "Revolutionary America"
+  AME_Revolutionary_State_jc_DEF:0 "Revolutionary America"
+  AME_Revolutionary_State_ni_ADJ:0 "American"
+  AME_Revolutionary_State_rc_ADJ:0 "American"
+  AME_Revolutionary_State_lb_ADJ:0 "American"
+  AME_Revolutionary_State_ss_ADJ:0 "American"
+  AME_Revolutionary_State_jc_ADJ:0 "American"
+  AME_Revolutionary_State_ds_ADJ:0 "American"
+  AME_Revolutionary_State_cn_ADJ:0 "American"
+  AME_Revolutionary_State_an_ADJ:0 "American"
+
+  AME_Post_Revolution_Provisional_ni:0 "American Provisional Congress"
+  AME_Post_Revolution_Provisional_ni_DEF:0 "American Provisional Congress
+  AME_Post_Revolution_Provisional_ds:0 "American Provisional Congress"
+  AME_Post_Revolution_Provisional_ds_DEF:0 "American Provisional Congress"
+  AME_Post_Revolution_Provisional_rc:0 "American Provisional Congress"
+  AME_Post_Revolution_Provisional_rc_DEF:0 "American Provisional Congress"
+  AME_Post_Revolution_Provisional_an:0 "American Provisional Congress"
+  AME_Post_Revolution_Provisional_an_DEF:0 "American Provisional Congress"
+  AME_Post_Revolution_Provisional_cn:0 "American Provisional Congress"
+  AME_Post_Revolution_Provisional_cn_DEF:0 "American Provisional Congress"
+  AME_Post_Revolution_Provisional_lb:0 "American Provisional Congress"
+  AME_Post_Revolution_Provisional_lb_DEF:0 "American Provisional Congress"
+  AME_Post_Revolution_Provisional_ss:0 "American Provisional Congress"
+  AME_Post_Revolution_Provisional_ss_DEF:0 "American Provisional Congress"
+  AME_Post_Revolution_Provisional_jc:0 "American Provisional Congress"
+  AME_Post_Revolution_Provisional_jc_DEF:0 "American Provisional Congress"
+  AME_Post_Revolution_Provisional_ni_ADJ:0 "American"
+  AME_Post_Revolution_Provisional_rc_ADJ:0 "American"
+  AME_Post_Revolution_Provisional_lb_ADJ:0 "American"
+  AME_Post_Revolution_Provisional_ss_ADJ:0 "American"
+  AME_Post_Revolution_Provisional_jc_ADJ:0 "American"
+  AME_Post_Revolution_Provisional_ds_ADJ:0 "American"
+  AME_Post_Revolution_Provisional_cn_ADJ:0 "American"
+  AME_Post_Revolution_Provisional_an_ADJ:0 "American"
+
+  AME_Classical_Jacobin_ni:0 "American Revolutionary Republic"
+  AME_Classical_Jacobin_ni_DEF:0 "American Revolutionary Republic
+  AME_Classical_Jacobin_ds:0 "American Revolutionary Republic"
+  AME_Classical_Jacobin_ds_DEF:0 "American Revolutionary Republic"
+  AME_Classical_Jacobin_rc:0 "American Revolutionary Republic"
+  AME_Classical_Jacobin_rc_DEF:0 "American Revolutionary Republic"
+  AME_Classical_Jacobin_an:0 "American Revolutionary Republic"
+  AME_Classical_Jacobin_an_DEF:0 "American Revolutionary Republic"
+  AME_Classical_Jacobin_cn:0 "American Revolutionary Republic"
+  AME_Classical_Jacobin_cn_DEF:0 "American Revolutionary Republic"
+  AME_Classical_Jacobin_lb:0 "American Revolutionary Republic"
+  AME_Classical_Jacobin_lb_DEF:0 "American Revolutionary Republic"
+  AME_Classical_Jacobin_ss:0 "American Revolutionary Republic"
+  AME_Classical_Jacobin_ss_DEF:0 "American Revolutionary Republic"
+  AME_Classical_Jacobin_jc:0 "American Revolutionary Republic"
+  AME_Classical_Jacobin_jc_DEF:0 "American Revolutionary Republic"
+  AME_Classical_Jacobin_ni_ADJ:0 "American"
+  AME_Classical_Jacobin_rc_ADJ:0 "American"
+  AME_Classical_Jacobin_lb_ADJ:0 "American"
+  AME_Classical_Jacobin_ss_ADJ:0 "American"
+  AME_Classical_Jacobin_jc_ADJ:0 "American"
+  AME_Classical_Jacobin_ds_ADJ:0 "American"
+  AME_Classical_Jacobin_cn_ADJ:0 "American"
+  AME_Classical_Jacobin_an_ADJ:0 "American"
+
+  AME_Hardline_Jacobin_ni:0 "American Commoner's Republic"
+  AME_Hardline_Jacobin_ni_DEF:0 "American Commoner's Republic
+  AME_Hardline_Jacobin_ds:0 "American Commoner's Republic"
+  AME_Hardline_Jacobin_ds_DEF:0 "American Commoner's Republic"
+  AME_Hardline_Jacobin_rc:0 "American Commoner's Republic"
+  AME_Hardline_Jacobin_rc_DEF:0 "American Commoner's Republic"
+  AME_Hardline_Jacobin_an:0 "American Commoner's Republic"
+  AME_Hardline_Jacobin_an_DEF:0 "American Commoner's Republic"
+  AME_Hardline_Jacobin_cn:0 "American Commoner's Republic"
+  AME_Hardline_Jacobin_cn_DEF:0 "American Commoner's Republic"
+  AME_Hardline_Jacobin_lb:0 "American Commoner's Republic"
+  AME_Hardline_Jacobin_lb_DEF:0 "American Commoner's Republic"
+  AME_Hardline_Jacobin_ss:0 "American Commoner's Republic"
+  AME_Hardline_Jacobin_ss_DEF:0 "American Commoner's Republic"
+  AME_Hardline_Jacobin_jc:0 "American Commoner's Republic"
+  AME_Hardline_Jacobin_jc_DEF:0 "American Commoner's Republic"
+  AME_Hardline_Jacobin_ni_ADJ:0 "American"
+  AME_Hardline_Jacobin_rc_ADJ:0 "American"
+  AME_Hardline_Jacobin_lb_ADJ:0 "American"
+  AME_Hardline_Jacobin_ss_ADJ:0 "American"
+  AME_Hardline_Jacobin_jc_ADJ:0 "American"
+  AME_Hardline_Jacobin_ds_ADJ:0 "American"
+  AME_Hardline_Jacobin_cn_ADJ:0 "American"
+  AME_Hardline_Jacobin_an_ADJ:0 "American"
+
   NIC_Zeledon_Victory_ni:0 "Nicaraguan Republic"
   NIC_Zeledon_Victory_ni_DEF:0 "The Nicaraguan Republic"
   NIC_Zeledon_Victory_ds:0 "Nicaraguan Republic"
@@ -3786,3 +3886,28 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   CAL_United_States_Of_Mexico:0 "United States of México"
   CAL_United_States_Of_Mexico_DEF:0 "the United States of México"
   CAL_United_States_Of_Mexico_ADJ:0 "Mexican"
+
+  NIC_Coalition_Government_ni:0 "Managua Coalition Government"
+  NIC_Coalition_Government_ni_DEF:0 "The Managua Coalition Government"
+  NIC_Coalition_Government_ds:0 "Managua Coalition Government"
+  NIC_Coalition_Government_ds_DEF:0 "Managua Coalition Government"
+  NIC_Coalition_Government_rc:0 "Managua Coalition Government"
+  NIC_Coalition_Government_rc_DEF:0 "Managua Coalition Government"
+  NIC_Coalition_Government_an:0 "Managua Coalition Government"
+  NIC_Coalition_Government_an_DEF:0 "Managua Coalition Government"
+  NIC_Coalition_Government_cn:0 "Managua Coalition Government"
+  NIC_Coalition_Government_cn_DEF:0 "Managua Coalition Government"
+  NIC_Coalition_Government_lb:0 "Managua Coalition Government"
+  NIC_Coalition_Government_lb_DEF:0 "Managua Coalition Government"
+  NIC_Coalition_Government_ss:0 "Managua Coalition Government"
+  NIC_Coalition_Government_ss_DEF:0 "Managua Coalition Government"
+  NIC_Coalition_Government_jc:0 "Managua Coalition Government"
+  NIC_Coalition_Government_jc_DEF:0 "The Managua Coalition Government"
+  NIC_Coalition_Government_ni_ADJ:0 "Nicaraguan"
+  NIC_Coalition_Government_rc_ADJ:0 "Nicaraguan"
+  NIC_Coalition_Government_lb_ADJ:0 "Nicaraguan"
+  NIC_Coalition_Government_ss_ADJ:0 "Nicaraguan"
+  NIC_Coalition_Government_jc_ADJ:0 "Nicaraguan"
+  NIC_Coalition_Government_ds_ADJ:0 "Nicaraguan"
+  NIC_Coalition_Government_cn_ADJ:0 "Nicaraguan"
+  NIC_Coalition_Government_an_ADJ:0 "Nicaraguan"
