--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8820,6 +8820,31 @@ SAN_an_ADJ:0 "Indian"
  KKK_cn_ADJ:0 "Old Dixie"
  KKK_an_ADJ:0 "Old Dixie"
 
+  USA_ni:0 "United Gamers of America"
+  USA_ni_DEF:0 "The United Gamers of America"
+  USA_ds:0 "American Union State"
+  USA_ds_DEF:0 "The American Union State"
+  USA_rc:0 "America but Based"
+  USA_rc_DEF:0 "The America but Based"
+  USA_an:0 "United McStates of Exxon Disney"
+  USA_an_DEF:0 "The United McStates of Exxon Disney"
+  USA_cn:0 "Boomer States of America"
+  USA_cn_DEF:0 "The Boomer States of America"
+  USA_lb:0 "Joe Biden's America"
+  USA_lb_DEF:0 "The Joe Biden's America"
+  USA_ss:0 "Democratic Socialist People's Revolutionary Anarchist Federation of American Republics"
+  USA_ss_DEF:0 "The Democratic Socialist People's Revolutionary Anarchist Federation of American Republics"
+  USA_jc:0 "America if the Poors had Healthcare"
+  USA_jc_DEF:0 "The America if the Poors had Healthcare"
+  USA_ni_ADJ:0 "American"
+  USA_rc_ADJ:0 "American"
+  USA_lb_ADJ:0 "American"
+  USA_ss_ADJ:0 "American"
+  USA_jc_ADJ:0 "American"
+  USA_ds_ADJ:0 "American"
+  USA_cn_ADJ:0 "American"
+  USA_an_ADJ:0 "American"
+
 ###################################
 # TEMPLATE
 ################################### #use the or so help me i will find you #*this not the
