New Stuff and Bugfixes

--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -323,13 +323,28 @@
  AME_infantry_equipment_1933_short:0 "RM 33"
 
  AME_infantry_equipment_1:0 "Garand Rifle 52"
- AME_infantry_equipment_1_short:0 "GR 52 "
+ AME_infantry_equipment_1_short:0 "GR 52"
 
  AME_infantry_equipment_2:0 "Sniperworks Full Automatic Rifle 40"
- AME_infantry_equipment_2_short:0 "SFM 40 "
+ AME_infantry_equipment_2_short:0 "SFM 40"
 
  AME_infantry_equipment_3:0 "Experimental Decrompession Rifle XI"
- AME_infantry_equipment_3_short:0 "EX XI "
+ AME_infantry_equipment_3_short:0 "EX XI"
+
+ MEX_infantry_equipment_0:0 "Mondragón M1908 Rifle"
+ MEX_infantry_equipment_0_short:0 "M1908"
+
+ MEX_infantry_equipment_1933:0 "Mondragón M1933 Rifle S"
+ MEX_infantry_equipment_1933_short:0 "M1933S"
+
+ MEX_infantry_equipment_1:0 "Mendoza S-63"
+ MEX_infantry_equipment_1_short:0 "S-63"
+
+ MEX_infantry_equipment_2:0 "Mendoza ASR 40"
+ MEX_infantry_equipment_2_short:0 "ASR 40"
+
+ MEX_infantry_equipment_3:0 "Asalto Rifle HM-4XXII"
+ MEX_infantry_equipment_3_short:0 "HM-4XXII"
 
  infantry_weapons1933:0 "Infantry Equipment II"
  infantry_weapons1933_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs. Improved weapon models and more specialized equipment."
