--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1063,6 +1063,7 @@
  VICTORY_POINTS_12746:0 "Tepic"
  VICTORY_POINTS_8057:0 "Mazatlán"
  VICTORY_POINTS_10848:0 "Hermosillo"
+ VICTORY_POINTS_11420:0 "Amiens"
  VICTORY_POINTS_8003:0 "Torreón"
  VICTORY_POINTS_10830:0 "Delicias"
  VICTORY_POINTS_12745:0 "Chihuahua"
