Small LOC changes here and there.
Stuff in Mexico, Culture and Denmark-Norway

--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -555,12 +555,12 @@
   mexico.23.d:0 "After the arrests of Oscar Marato, Victor Marato and their lawyer Antonio Zaragoza in Veracruz not too long ago, the police launched an official investigation into why they were present at the deal. The question has already finished up, and the convicts are willing to give up some information about the head of the Marato bandit gang. They are also willing to give the location of the headquarters of the bandits for a shorter prison sentence. The government accepted the deal and had started an operation. The operation took place last night, with big success. The head of the bandit gang, Sergi Marato and other influential members have been arrested and put into jail. The bandit gang was mostly situated throughout the state of Sonora and had bribed many policemen to keep it a secret. This arrest has to be one of the biggest hits to the Mexican and Colombian bandits."
   mexico.23.a:0 "One Down, Many To Go!"
 
-  mexico.24.t:0 "War Against The Bandits Won?"
+  mexico.24.t:0 "Bandits Issue Mostly Resolved"
   mexico.24.d:0 "WIP"
   mexico.24.a:0 "What A Speech!"
 
   mexico.25.t:0 "Northern Refugees"
-  mexico.25.d:0 "WIP"
+  mexico.25.d:0 "The Wild West is a wild place with conflicts and wars being nothing but regular. Recently however there have been more gunshots and death than usual. Many refugees from Santa Fe, Nevada and others are arriving and seeking refuge."
   mexico.25.a:0 "What's Happening Up There?"
 
   mexico.26.t:0 "Welcome To Tucson?"
