--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -71,7 +71,7 @@
  VICTORY_POINTS_11610:0 "Pecs"
  VICTORY_POINTS_11659:0 "Debrecen"
  VICTORY_POINTS_391:0 "Amsterdam"
- VICTORY_POINTS_3211:0 "The Hague"
+ VICTORY_POINTS_3211:0 "Den Haag"
  VICTORY_POINTS_9498:0 "Rotterdam"
  VICTORY_POINTS_6496:0 "Eindhoven"
  VICTORY_POINTS_516:0 "Brussel"
@@ -205,9 +205,9 @@
  VICTORY_POINTS_11114:0 "Karlstad"
  VICTORY_POINTS_11380:0 "Norrköping"
  VICTORY_POINTS_11215:0 "Karlskrona"
- VICTORY_POINTS_6115:0 "Oslo"
+ VICTORY_POINTS_6115:0 "Kristiania"
  VICTORY_POINTS_3021:0 "Hamar"
- VICTORY_POINTS_9296:0 "Kristiansand"
+ VICTORY_POINTS_9296:0 "Halvøen"
  VICTORY_POINTS_107:0 "Namsos"
  VICTORY_POINTS_9127:0 "Ålesund"
  VICTORY_POINTS_53:0 "Stavanger"
@@ -365,7 +365,7 @@
  VICTORY_POINTS_7191:0 "Hangzhou"
  VICTORY_POINTS_7222:0 "Hefei"
  VICTORY_POINTS_9958:0 "Zhengzhou"
- VICTORY_POINTS_10000:0 "Qingdao"
+ VICTORY_POINTS_10000:0 "Tsingtao"
  VICTORY_POINTS_10068:0 "Tianjin"
  VICTORY_POINTS_10404:0 "Guilin"
  VICTORY_POINTS_12299:0 "Singapore"
@@ -598,7 +598,7 @@
  VICTORY_POINTS_4641:0 "Port-au-Prince"
  VICTORY_POINTS_7660:0 "Santo Domingo"
  VICTORY_POINTS_4598:0 "Santiago de los Caballeros"
- VICTORY_POINTS_12885:0 "Cayenne"
+ VICTORY_POINTS_12885:0 "Borgesiusstad"
  VICTORY_POINTS_10747:0 "Bogota"
  VICTORY_POINTS_2023:0 "Medellin"
  VICTORY_POINTS_12790:0 "Cartagena"
@@ -875,7 +875,7 @@
  VICTORY_POINTS_6971:0 "Huntington"
  VICTORY_POINTS_7045:0 "Raleigh"
  VICTORY_POINTS_3823:0 "Richmond"
- VICTORY_POINTS_3733:0 "Perth"
+ VICTORY_POINTS_3733:0 "Zouterbommel"
  VICTORY_POINTS_10869:0 "Nouakchott"
  VICTORY_POINTS_12381:0 "Brisbane"
  VICTORY_POINTS_7388:0 "Tampa"
